examples/auth-keycloak/emqx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - mqtt.greeniq.vn
    secretName: emqx-dashboard-tls
  rules:
  - host: mqtt.greeniq.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emqx
            port:
              number: 18083
